// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProxyStatusList when status is synced match the snapshot 1`] = `""`;

exports[`ProxyStatusList when there are components without value match the snapshot 1`] = `
<Stack>
  <StackItem
    style={
      Object {
        "color": "#ffffff",
        "fontSize": "1.1rem",
        "fontWeight": "bold",
      }
    }
  >
    Istio Proxy Status
  </StackItem>
  <StackItem
    key="proxy-status-0"
    style={
      Object {
        "color": "#ffffff",
        "fontSize": "70%",
      }
    }
  >
    CDS: -
  </StackItem>
  <StackItem
    key="proxy-status-3"
    style={
      Object {
        "color": "#ffffff",
        "fontSize": "70%",
      }
    }
  >
    RDS: -
  </StackItem>
</Stack>
`;

exports[`ProxyStatusList when there are unsyced components match the snapshot 1`] = `
<Stack>
  <StackItem
    style={
      Object {
        "color": "#ffffff",
        "fontSize": "1.1rem",
        "fontWeight": "bold",
      }
    }
  >
    Istio Proxy Status
  </StackItem>
  <StackItem
    key="proxy-status-0"
    style={
      Object {
        "color": "#ffffff",
        "fontSize": "70%",
      }
    }
  >
    CDS: NOT_SENT
  </StackItem>
  <StackItem
    key="proxy-status-3"
    style={
      Object {
        "color": "#ffffff",
        "fontSize": "70%",
      }
    }
  >
    RDS: STALE
  </StackItem>
</Stack>
`;
